force-app/main/default/objects/Progress_Trail_Segment__c/Progress_Trail_Segment__c.object-meta.xml
<CustomObject>
    <label>Progress Trail Segment</label>
    <nameField>
        <label>Segment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Progress Trail Segments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>