force-app/main/default/objects/Progress_Trail_Segment__c/fields/External_Guidance_Text__c.field-meta.xml
<CustomField>
    <fullName>External_Guidance_Text__c</fullName>
    <description>Rich text guidance to external users (used when rich text is selected instead of a flow).</description>
    <inlineHelpText>Rich text guidance to external users (used when rich text is selected instead of a flow).</inlineHelpText>
    <label>External Guidance Text</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>