force-app/main/default/objects/Progress_Trail_Segment__c/fields/Internal_Guidance_Flow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Internal_Guidance_Flow_API_Name__c</fullName>
    <description>Guidance displayed to internal users for this segment (used when flow is selected instead of rich text).</description>
    <inlineHelpText>Guidance displayed to internal users for this segment (used when flow is selected instead of rich text).</inlineHelpText>
    <label>Internal Guidance Flow API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>