force-app/main/default/objects/Progress_Trail_Segment__c/fields/Pass_RecordId_to_External_Flow_if_Active__c.field-meta.xml
<CustomField>
    <fullName>Pass_RecordId_to_External_Flow_if_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked and the active external guidance type is set to Flow, the current record&apos;s Id will be passed to the designated Flow as an input variable called recordId.</description>
    <inlineHelpText>When checked and the active external guidance type is set to Flow, the current record&apos;s Id will be passed to the designated Flow as an input variable called recordId.</inlineHelpText>
    <label>Pass RecordId to External Flow if Active</label>
    <type>Checkbox</type>
</CustomField>