force-app/main/default/objects/Progress_Trail_Segment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Progress_Trail__c</columns>
    <columns>Internal_Guidance_Active_Type__c</columns>
    <columns>External_Guidance_Active_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>